--- a/Styles/animation.css
+++ b/Styles/animation.css
@@ -73,3 +73,27 @@
 
 }
 /* box animation right end-------------------------------------------------- */
+
+
+
+
+
+
+
+
+/*
+
+
+
+
+
+
+data-aos="fade"
+data-aos="fade-up"
+data-aos="fade-down"
+data-aos="fade-left"
+data-aos="fade-right"
+data-aos="fade-up-right"
+data-aos="fade-up-left"
+data-aos="fade-down-right"
+data-aos="fade-down-left" */
