--- a/Styles/Note.css
+++ b/Styles/Note.css
@@ -57,13 +57,15 @@ button[type="submit"]:hover {
 }
 
 .Note_box {
-  background:linear-gradient(to right, var(--primary-color), var(--secondary-color));
-  padding: 5px;
+  background:linear-gradient(180deg, var(--primary-color), var(--secondary-color));
+  padding:20px;
   border-radius: var(--radius);
   margin-bottom: 30px;
   box-shadow: var(--shadow);
   transition: transform 0.2s;
   border: 0;
+  width: 70%;
+  margin: auto 15%;
 
 }
 
@@ -73,7 +75,7 @@ button[type="submit"]:hover {
 
 #Note_tittle {
   font-size: 2rem;
-  color:black;
+  color:rgb(204, 198, 198);
   font-weight: bold;
   display: flex;
   justify-content: space-between;
@@ -83,7 +85,7 @@ button[type="submit"]:hover {
 #span {
   background:transparent;
   border: none;
-  color: var(--primary-color);
+  color:white;
   font-size:2.2rem;
   cursor: pointer;
   transition: color 0.3s;
@@ -181,7 +183,7 @@ button[type="submit"]:hover {
 .paid-notes-section {width: 80%; margin: 40px 10%; ; padding: 24px; border-radius: 8px; }
 .paid-notes-list { display: flex; gap: 24px; flex-wrap: wrap; }
 .paid-note-box { background: #fff; border: 1px solid #eee; border-radius: 6px; padding: 18px; width:30%; margin:0.5%; box-shadow: var(--shadow); }
-.paid-note-footer { margin-top: 12px; display: flex; justify-content: space-between; align-items: center; }
+.paid-note-footer { margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; }
 .note-price { font-weight: bold; color: #2e7d32; }
 .buy-btn { background: #007bff; color: #fff; padding: 6px 16px; border-radius: 4px; text-decoration: none; }
 .buy-btn:hover { background: #0056b3; }
@@ -194,6 +196,7 @@ button[type="submit"]:hover {
   #Note_tittle {font-size:1.5rem;}
 #span {  margin-right: 20px;}
 #NotesContent{padding:2rem 1rem;}
+
 #Note_content {
   width: 100%;
   height: 120px;
@@ -211,7 +214,14 @@ button[type="submit"]
   height:52px;
   margin-top: 20px;
 
-} .notes-section {
+}.Note_box {
+
+  width: 90%;
+  margin: auto 5%;
+
+}
+
+.notes-section {
   padding:2rem 1rem;
 
 }.notes-section h2 {
@@ -241,7 +251,7 @@ button[type="submit"]
   justify-content:space-between;
 }.Note_footer a
 {
-  font-size:0.8rem;
+  font-size:0.5rem;
   height: 30px;
   width: 80px;
   padding:auto;
